some responsive features

--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@
                         <div class="card py-4 h-100" id="img-cruiser-two">
                         </div>
                         <br>
-                        <h4 class='text-uppercase m-0 text-center text-white'>Круїзер</h4>
+                        <h4 class='text-uppercase m-0 text-center text-white'><span>Круїзер</span></h4>
                     </div>
 
                     <div class="col-md-4 mb-3 mb-md-0 stepone" id="img-long">
                         <div class="card py-4 h-100" id="img-long-two">
                         </div>
                         <br>
-                        <h4 class='text-uppercase m-0 text-center text-white'>Лонг</h4>
+                        <h4 class='text-uppercase m-0 text-center text-white'><span>Лонг</span></h4>
                     </div>
 
                     <div class="col-md-4 mb-3 mb-md-0 stepone" id="img-skate">
                         <div class="card py-4 h-100" id="img-skate-two">
                         </div>
                         <br>
-                        <h4 class='text-uppercase m-0 text-center text-white'>Трюковий</h4>
+                        <h4 class='text-uppercase m-0 text-center text-white'><span>Трюковий</span></h4>
                     </div>
                     <a href="#about" class="js-scroll-trigger btn-custom" id="btn-one">Далі</a>
                 </div>
